crates/ui/src/screens/battle/snapshots/trpg_ui__screens__battle__art_tests__forecast_with_pinning_shot_snapshot.snap
---
source: crates/ui/src/screens/battle/art_tests.rs
expression: buf.to_snapshot(&c.palette)
---
                                    ┌─ Iron Bow 20/20 ───────────────┐╔═════════ Forecast ═════════╗
                                    │ Attack                         │║ Pinning Shot (20 → 17)     ║
                                    │ Close Shot      −2 dur  E      │║ Test Archer   Brigand      ║
                                    │ Pinning Shot    −3 dur  D      │║ Iron Bow      Iron Axe     ║
                                    │ Vault           −1 dur  active │║ 20/20         20/20        ║
                                    └────────────────────────────────┘║ HP 17 █████   HP 20 █▒▒▒▒  ║
                                                                      ║ Hit  91       Hit  --      ║
                                                                      ║ Crit 3        Crit --      ║
                                                                      ║                            ║
                                                                      ║ ────────────────────────── ║
                                                                      ║  8 dmg   →  1   no counter ║
                    ≈≈≈≈≈≈≈≈≈≈....♣♣♣♣♠♠♠♠^^^^▲▲                      ║  8 dmg   →  2              ║
                    ≈≈≈≈≈≈≈≈....··Ra··♣♣♣♣^^^^^^                      ║ ────────────────────────── ║
                    ≈≈≈≈≈≈====··Lo··Br..♣♣♣♣....                      ║ 16 ×2     Total            ║
                    ..≈≈≈≈..··..............╦╦..                      ║                            ║
                    ....······....BrAr▓▓▓▓▓▓▓▓..                      ║ pins: Mov −3               ║
                    ..♣♣··....╦╦......▓▓░░╦╦▓▓..                      ║                            ║
                    ♣♣♣♣··..Kn........▓▓░░░░▓▓..                      ║                            ║
                    ♣♣♠♠··............▓▓▓▓▐▌▓▓..                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ╚════════════════════════════╝
                                                     w danger zone: OFF · Shift+Space auto-end: OFF 
 Left/Right target · Up/Down art · f attack · d back                                       F2 debug 
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbccccccccccddddddbbbbbbbbbbbbbbbbbbbbbbbbbbccccccccccbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddbbdccccccccccccccccccccccdddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddbbdeeeeeeeeeeedddfffffffddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabggggggggggggggggggggggggggggggggbbdhhhhhhhhddddddhhhhhhhhdddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddbbdhhhhhdddddddddhhhhhddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbdhhddddiiiiidddhhddddjjjjjddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabdhhhdddddddddddhhhddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabdhhhhddddddddddhhhhdddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabdbbbbbbbbbbbbbbbbbbbbbbbbbbdb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddhddhdddhhhhhhhhhhdb
aaaaaaaaaaaaaaaaaaaakkkkkkllllmmmmnnnnooooppppqqaaaaaaaaaaaaaaaaaaaaaabddddddddddhddhddddddddddddddb
aaaaaaaaaaaaaaaaaaaakkkkllllmmmmrrssrrnnnnppppppaaaaaaaaaaaaaaaaaaaaaabdbbbbbbbbbbbbbbbbbbbbbbbbbbdb
aaaaaaaaaaaaaaaaaaaakkllllttttrruurrvvmmnnnnmmmmaaaaaaaaaaaaaaaaaaaaaabdddddddddddhhhhhddddddddddddb
aaaaaaaaaaaaaaaaaaaammllllmmrrmmmmmmmmmmmmmmwwmmaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaammmmrrrrrrmmmmxxyyzzzzzzzzmmaaaaaaaaaaaaaaaaaaaaaabdAAAAAAAAAAAAdddddddddddddddb
aaaaaaaaaaaaaaaaaaaammnnrrmmmmwwmmmmmmzzBBwwzzmmaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaannnnrrmmyymmmmmmmmzzBBBBzzmmaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaannoorrmmmmmmmmmmmmzzzzCCzzmmaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDa
aDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaDDDDDDDDa
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text_highlight bg:panel_bg
d = fg:text bg:panel_bg
e = fg:player bg:panel_bg
f = fg:enemy bg:panel_bg
g = fg:panel_bg bg:panel_border_focus
h = fg:text_dim bg:panel_bg
i = fg:hp_high bg:panel_bg
j = fg:hp_low bg:panel_bg
k = fg:water bg:sea
l = fg:water bg:water_bg
m = fg:grass bg:grass_bg
n = fg:forest bg:forest_bg
o = fg:thicket bg:thicket_bg
p = fg:mountain bg:mountain_bg
q = fg:peak bg:peak_bg
r = fg:road bg:road_bg
s = fg:enemy bg:road_bg
t = fg:wood bg:water_bg
u = fg:player bg:road_bg
v = fg:enemy bg:#4c271c
w = fg:fort bg:fort_bg
x = fg:enemy bg:grass_bg
y = fg:player bg:grass_bg
z = fg:stone bg:stone_bg
A = fg:effect bg:panel_bg
B = fg:floor bg:floor_bg
C = fg:wood bg:stone_bg
D = fg:text_dim bg:black
--- overlays ---
over  256,222 16x2  hp_high
over  224,286 16x2  hp_high
over  288,254 16x2  hp_high
over  288,222 16x2  hp_high
over  272,254 16x2  hp_high
over  272,206 16x2  hp_high
over  287,208 3x1  cursor
over  287,208 1x3  cursor
over  301,208 3x1  cursor
over  303,208 1x3  cursor
over  287,221 3x1  cursor
over  287,219 1x3  cursor
over  301,221 3x1  cursor
over  303,219 1x3  cursor
